# ros2_learning

./: .gitignore
chapt1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world.cpp  learn_make
chapt2/: ros2_cpp_node.cpp
chapt2/chapt2_ws/: novel1.txt  novel2.txt  novel3.txt
chapt2/chapt2_ws/demo_cpp_pkg/: CMakeLists.txt  package.xml
chapt2/chapt2_ws/demo_cpp_pkg/src/: learn_auto.cpp  learn_function.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  learn_thread.cpp  person_node.cpp
chapt3/topic_practice_ws/src/status_display/: CMakeLists.txt  package.xml
chapt3/topic_practice_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
chapt3/topic_practice_ws/src/status_interface/: CMakeLists.txt  package.xml
chapt3/topic_practice_ws/src/status_interface/msg/: SystemStatus.msg
chapt3/topic_practice_ws/src/status_publisher/: package.xml  setup.py
chapt3/topic_practice_ws/src/status_publisher/status_publisher/: sys_status_pub.py
chapt3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chapt3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
chapt4/chapt4_ws/src/chapt4_interfaces/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/chapt4_interfaces/srv/: Patrol.srv
chapt4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/demo_cpp_service/launch/: demo.launch.py
chapt4/chapt4_ws/src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
chapt5/bags/rosbag2_2025_07_17-22_30_26/: metadata.yaml
chapt5/bags/rosbag2_2025_07_17-22_36_15/: metadata.yaml  rosbag2_2025_07_17-22_36_15_0.db3
chapt5/chapt5_ws/src/: rviz_tf.rviz
chapt5/chapt5_ws/src/demo_cpp_tf/: CMakeLists.txt  package.xml
chapt5/chapt5_ws/src/demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
chapt6/chapt_ws/src/fishbot_description/: CMakeLists.txt
chapt6/chapt_ws/src/fishbot_description/config/: fishbot_ros2_controller.yaml
chapt6/chapt_ws/src/fishbot_description/config/rviz/: display_model.rviz
chapt6/chapt_ws/src/fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
chapt6/chapt_ws/src/fishbot_description/urdf/: first_robot.urdf.xacro
chapt6/chapt_ws/src/fishbot_description/urdf/fishbot/: base.urdf.xacro  common_inertia.xacro  fishbot.ros2_control.xacro  fishbot.urdf.xacro
chapt6/chapt_ws/src/fishbot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
chapt6/chapt_ws/src/fishbot_description/urdf/fishbot/plugins/: gazebo_sensor_plugin.xacro
chapt6/chapt_ws/src/fishbot_description/urdf/fishbot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
chapt6/chapt_ws/src/fishbot_description/world/: custom_room.world
chapt7/chapt7_ws/src/autopatrol_interfaces/: CMakeLists.txt  package.xml
chapt7/chapt7_ws/src/autopatrol_robot_cpp/: CMakeLists.txt  package.xml
chapt7/chapt7_ws/src/autopatrol_robot_cpp/config/: patrol_config.yaml
chapt7/chapt7_ws/src/autopatrol_robot_cpp/launch/: autopatrol.launch.py
chapt7/chapt7_ws/src/autopatrol_robot_cpp/src/: patrol_node.cpp  speaker_node.cpp
chapt7/chapt7_ws/src/fishbot_appplication/: CMakeLists.txt  package.xml
chapt7/chapt7_ws/src/fishbot_appplication/src/: init_robot_pose.cpp
chapt7/chapt7_ws/src/fishbot_description/: CMakeLists.txt  package.xml
chapt7/chapt7_ws/src/fishbot_description/launch/: gazebo_sim.launch.py
chapt7/chapt7_ws/src/fishbot_description/urdf/: first_robot.urdf  first_robot.urdf.xacro
chapt7/chapt7_ws/src/fishbot_description/urdf/fishbot/: base.urdf.xacro
chapt7/chapt7_ws/src/fishbot_description/urdf/fishbot/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
chapt7/chapt7_ws/src/fishbot_description/urdf/fishbot/sensor/: camera.urdf.xacro  laser.urdf.xacro
chapt7/chapt7_ws/src/fishbot_description/world/room/: model.sdf
chapt7/chapt7_ws/src/fishbot_navigation2/: CMakeLists.txt  package.xml
chapt7/chapt7_ws/src/fishbot_navigation2/launch/: navigation2.launch.py
chapt7/chapt7_ws/src/fishbot_navigation2/maps/: room.pgm  room.yaml
chapt_action/action_ws/src/action_tutorials_cpp/: CMakeLists.txt  package.xml
chapt_action/action_ws/src/action_tutorials_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
chapt_action/action_ws/src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
